[gd_scene load_steps=18 format=3 uid="uid://bdr0keyymx0jk"]

[ext_resource type="PackedScene" uid="uid://dg035xci6inme" path="res://Scene/InteractionPopup.tscn" id="1_8e61w"]
[ext_resource type="Script" uid="uid://cevii17w6q86o" path="res://Scripts/Work/keyboard_popup.gd" id="2_k0q5x"]
[ext_resource type="Texture2D" uid="uid://d1gux3ef6tgoi" path="res://Assets/Work/keyboard_back.png" id="3_k0q5x"]
[ext_resource type="Script" uid="uid://bxqluiwvbqr06" path="res://Scripts/Work/keyboard.gd" id="3_kr0vn"]
[ext_resource type="Texture2D" uid="uid://dlhhm2i0amyvi" path="res://Assets/Work/keyboard_b.png" id="4_kr0vn"]
[ext_resource type="Texture2D" uid="uid://b856nxckucm7q" path="res://Assets/Work/keyboard_z.png" id="5_3qjao"]
[ext_resource type="Texture2D" uid="uid://dc3rectcjri4b" path="res://Assets/Leg.png" id="5_pco1i"]
[ext_resource type="Texture2D" uid="uid://c5pjwepgyitqx" path="res://Assets/Work/zKeycapPressed.png" id="7_y7pmg"]
[ext_resource type="Texture2D" uid="uid://b3w43qdwhsrd" path="res://Assets/Work/bKeycapPressed.png" id="8_yuy0o"]
[ext_resource type="AudioStream" uid="uid://c7h34mjrabaxe" path="res://Assets/Audio/SFX/Office/Keyboard/1.wav" id="10_qvlfx"]
[ext_resource type="AudioStream" uid="uid://db5oh55kfw846" path="res://Assets/Audio/SFX/Office/Keyboard/2.wav" id="11_cwk6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr0vn"]
size = Vector2(205, 105.5)

[sub_resource type="Animation" id="Animation_guyf4"]
resource_name = "Appear"
length = 0.303
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hands:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(125, 291.455), Vector2(125, 148)]
}

[sub_resource type="Animation" id="Animation_y7pmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hands:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(125, 291.455)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hands/Leg:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-128.385, 577.293)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Keyboard/KeyboardBack:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hands/Leg:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0698132]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Keyboard/KeyboardB:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(127, 158)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hands/Leg2:skew")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hands/Leg2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(54.061, 4.2403)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Keyboard/KeyboardZ:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(127.052, 158.052)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Keyboard/KeyboardB:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Keyboard/KeyboardBPressed:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Keyboard/KeyboardZPressed:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Keyboard/KeyboardZ:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k0q5x"]
resource_name = "TypeB"
length = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hands/Leg:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-128.385, 577.293), Vector2(-128.385, 577.293), Vector2(-128.385, 720.568), Vector2(-128.385, 577.293)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Keyboard/KeyboardBack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.0349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hands:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(125, 153)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hands/Leg:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0698132]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Keyboard/KeyboardB:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667, 0.100845, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(127, 158), Vector2(127, 169), Vector2(127, 158)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Keyboard/KeyboardB:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Keyboard/KeyboardBPressed:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}

[sub_resource type="Animation" id="Animation_3qjao"]
resource_name = "TypeZ"
length = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hands:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(125, 153)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hands/Leg2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0341782, 0.100826, 0.168327),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(54.061, 4.2403), Vector2(54.061, 4.2403), Vector2(54.061, 31.515), Vector2(54.061, 4.2403)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hands/Leg2:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0341782),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0698132]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Keyboard/KeyboardZ:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0658218, 0.1, 0.165822),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(127, 158), Vector2(127, 169), Vector2(127, 158)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Keyboard/KeyboardBack:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0349066, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Keyboard/KeyboardZPressed:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Keyboard/KeyboardZ:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yuy0o"]
_data = {
&"Appear": SubResource("Animation_guyf4"),
&"RESET": SubResource("Animation_y7pmg"),
&"TypeB": SubResource("Animation_k0q5x"),
&"TypeZ": SubResource("Animation_3qjao")
}

[node name="KeyboardPopup" instance=ExtResource("1_8e61w")]
script = ExtResource("2_k0q5x")

[node name="Elements" type="Node2D" parent="Popup/PanelContainer/Background" index="0"]
position = Vector2(-10, -10)

[node name="Keyboard" type="Area2D" parent="Popup/PanelContainer/Background/Elements" index="0"]
script = ExtResource("3_kr0vn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="0"]
position = Vector2(127, 160)
shape = SubResource("RectangleShape2D_kr0vn")

[node name="KeyboardBack" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="1"]
position = Vector2(127.052, 158.052)
scale = Vector2(0.243175, 0.243175)
texture = ExtResource("3_k0q5x")

[node name="KeyboardB" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="2"]
position = Vector2(127, 158)
scale = Vector2(0.243175, 0.243175)
texture = ExtResource("4_kr0vn")

[node name="KeyboardZ" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="3"]
position = Vector2(127.052, 158.052)
scale = Vector2(0.243175, 0.243175)
texture = ExtResource("5_3qjao")

[node name="KeyboardZPressed" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="4"]
visible = false
position = Vector2(128, 159)
scale = Vector2(0.238588, 0.238588)
texture = ExtResource("7_y7pmg")

[node name="KeyboardBPressed" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="5"]
visible = false
position = Vector2(129, 157)
scale = Vector2(0.244472, 0.244472)
texture = ExtResource("8_yuy0o")

[node name="Sound1" type="AudioStreamPlayer2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="6"]
stream = ExtResource("10_qvlfx")

[node name="Sound2" type="AudioStreamPlayer2D" parent="Popup/PanelContainer/Background/Elements/Keyboard" index="7"]
stream = ExtResource("11_cwk6t")

[node name="Hands" type="Node2D" parent="Popup/PanelContainer/Background/Elements" index="1"]
position = Vector2(125, 291.455)

[node name="Leg" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Hands" index="0"]
position = Vector2(-45.4948, -1.0592)
rotation = 0.187329
scale = Vector2(0.185202, 0.191715)
skew = 0.0698132
texture = ExtResource("5_pco1i")
offset = Vector2(-128.385, 577.293)

[node name="Leg2" type="Sprite2D" parent="Popup/PanelContainer/Background/Elements/Hands" index="1"]
position = Vector2(54.061, 4.2403)
rotation = -3.33307
scale = Vector2(0.185, -0.192)
texture = ExtResource("5_pco1i")
offset = Vector2(-87.6051, 558.799)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Popup/PanelContainer/Background/Elements" index="2"]
libraries = {
&"": SubResource("AnimationLibrary_yuy0o")
}

[connection signal="input_event" from="Popup/PanelContainer/Background/Elements/Keyboard" to="Popup/PanelContainer/Background/Elements/Keyboard" method="_on_input_event"]
[connection signal="mouse_entered" from="Popup/PanelContainer/Background/Elements/Keyboard" to="Popup/PanelContainer/Background/Elements/Keyboard" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Popup/PanelContainer/Background/Elements/Keyboard" to="Popup/PanelContainer/Background/Elements/Keyboard" method="_on_mouse_exited"]
